add jobname instead hostname in template

--- a/vee_mail_template.html
+++ b/vee_mail_template.html
@@ -12,7 +12,7 @@
 <table style="border-collapse: collapse;" cellspacing="0" cellpadding="0" width="100%" border="0">
 <tbody>
 <tr style="height:70px">
-<td style="width: 80%;border: none;background-color: XXXBGCOLORXXX;color: White;font-weight: bold;font-size: 16px;height: 70px;vertical-align: bottom;padding: 0 0 17px 15px;font-family: Tahoma;">Agent Backup job: Backup Job XXXHOSTNAMEXXX<div class="jobDescription" style="margin-top: 5px;font-size: 12px;"> Veeam Agent for Linux </div> </td>
+<td style="width: 80%;border: none;background-color: XXXBGCOLORXXX;color: White;font-weight: bold;font-size: 16px;height: 70px;vertical-align: bottom;padding: 0 0 17px 15px;font-family: Tahoma;">Agent Backup job: XXXJOBNAMEXXX<div class="jobDescription" style="margin-top: 5px;font-size: 12px;"> Veeam Agent for Linux </div> </td>
 <td style="background-color: XXXBGCOLORXXX;color: White;font-weight: bold;font-size: 16px;height: 70px;vertical-align: bottom;padding: 0 0 17px 15px;font-family: Tahoma;padding-bottom: 42px;">XXXSTATXXX</td>
 </tr>
 <tr>
